--- a/src/Component/RestaurantsYouMayLike.css
+++ b/src/Component/RestaurantsYouMayLike.css
@@ -4,7 +4,7 @@
     margin-top: 3rem;
     margin-bottom: 1rem;
     font-weight: 600;
-    color: rgb(41, 41, 41);
+    color: #545454;
     text-align: left;
     padding-left: 6rem;
 
@@ -30,5 +30,8 @@
 }
 .restaurants-card > p{
     font-size: 2rem;
+    font-weight: 500;
+    color: #202020;
+
 }
 
